--- a/index.html
+++ b/index.html
@@ -11,5 +11,28 @@
 </head>
 <body>
     <h1>Here We Go Start Bootstrap!!!</h1>
+    <h1>Buttons</h1>
+    <button class="btn btn-primary">Button</button>
+    <button class="btn btn-success">Success</button>
+    <button class="btn btn-warning">Warning</button>
+
+    <h1>Colors</h1>
+    <p class="text-primary">This is the paragraph!</p>
+    <p class="text-danger"> This is the danger man!</p>
+
+    <h1> Background </h1>
+    <div class="bg-success text-white">
+        <h1> News</h1>
+        <p>I am start to learning bootstrap</p>
+    </div>
+    <div class="bg-info text-dark">
+        <h1>Hobby</h1>
+        <p>Learning something new day by day</p>
+    </div>
+
+    <h1>Images</h1>
+    <img class="img-fluid w-50 rounded-circle img-thumbnail" src="images/Pic-1.jpg" alt="">
+    <img class="img-fluid w-25 rounded rounded-circle" src="images/Pic-2.jpg" alt="">
+    <img src="images/Pic-3 .jpg" class="w-25" alt="">
 </body>
 </html>
