--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Bootstrap</title>
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="css/bootstrap/css/bootstrap.min.css">
+    <style>
+        h1{
+            margin-top: 50px;
+        }
+    </style>
     
 </head>
 <body>
@@ -34,5 +39,8 @@
     <img class="img-fluid w-50 rounded-circle img-thumbnail" src="images/Pic-1.jpg" alt="">
     <img class="img-fluid w-25 rounded rounded-circle" src="images/Pic-2.jpg" alt="">
     <img src="images/Pic-3 .jpg" class="w-25" alt="">
+
+
+    
 </body>
 </html>
